timing_120110: Update to GPTL 4.1 source (mods to gptl.c and GPTLprint_memusage)
               [Jim Rosinski (GPTL 4.1), Patrick Worley]
timing_120109: Bug fix (adding shr_kind_i8 to shr_kind_mod list)
timing_111205: Update to gptl 4.0 (introducing CESM customizations); 
               support for handles in t_startf/t_stopf;
               support for restricting output to explicitly named process subsets
               [Jim Rosinski (gptl 4.0), Patrick Worley]
timing_111101: Workaround for mpi_rsend issue on cray/gemini
timing_110928: Add a Makefile and build as a library usable by mct and pio
timing_101215: No changes from previous tag other than updating Changelog
timing_101210: Fix interface to cesm build system, add workaround for xlf bug
timing_101202: updated get_memusage and print_memusage from GPTL version 3.7; adds
	       improved support for MacOS and SLASHPROC
	       [Jim Rosinski, Chuck Bardeen (integrated by P. Worley)]
timing_091021: update to GPTL version 3.5; rewrite of GPTLpr_summary: much faster, merging 
	       events from all processes and all threads (not just process 0/thread 0);
	       miscellaneous fixes
	       [Jim Rosinski (gptl 3.5), Joseph Singh, Patrick Worley]
timing_090929: added explicit support for the GPTL-native token HAVE_MPI (indicating
	       presence of MPI library)
	       [Patrick Worley]
timing_081221: restore default assumption that gettimeofday available
timing_081028: bug fix in include order in gptl_papi.c
timing_081026: change in output format to make postprocessing simpler
timing_081024: support for up to one million processes and writing timing files to 
	       subdirectories
timing_081017: updated to gptl version 3_4_2. Changed some defaults.
               [Jim Rosinski, Patrick Worley]
timing_080629: added optional parameters perf_outpe_num and perf_outpe_stride to t_prf.
	       These are used to override the user specified values for timing data
	       written out before the end of a simulation.